# thesis-project

./: .gitignore  H2O2.xyz  H2O_3D.sdf  Main.py  mol_file.ipynb  pyproject.toml  rdkit.ipynb  z3dzernike.ipynb  z3zernike.ipynb  zer_mol.ipynb  zernike_test.ipynb
